--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,12 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/gwt-user-2.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jdo-api-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/transaction-api-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/antlr-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/checkstyle-5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-r06.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
