fixed delteUser method, added service path to web.xml
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1270 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -50,4 +50,14 @@
     <servlet-name>createCharacter</servlet-name>
     <url-pattern>/timadoruswebapp/createCharacter</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>delete</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.DeleteUserServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>delete</servlet-name>
+    <url-pattern>/timadoruswebapp/delete</url-pattern>
+  </servlet-mapping>
 </web-app>
