--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derby-10.6.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbyclient-10.6.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbynet-10.6.2.1.jar"/>
@@ -28,5 +27,6 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-r06.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.3.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
