--- a/.classpath
+++ b/.classpath
@@ -27,6 +27,6 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-r06.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.3.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
