- finished implementation of user list (design still remains unfinished) - added ajax transport of lists of objects
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1302 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -52,6 +52,16 @@
   </servlet-mapping>
   
   <servlet>
+    <servlet-name>character</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.CharacterServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>character</servlet-name>
+    <url-pattern>/timadoruswebapp/character</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
     <servlet-name>delete</servlet-name>
     <servlet-class>org.timadorus.webapp.server.rpc.service.DeleteUserServiceImpl</servlet-class>
   </servlet>
