first try to run a selenium test, problem: selenium can't even find the first link (start of firefox gwt plugin too slow?)
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1331 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/ivy.xml
+++ b/ivy.xml
@@ -26,6 +26,9 @@
 		<dependency org="org.apache.derby" name="derbynet" rev="10.6.2.1" conf="*->default" />
 		<dependency org="org.apache.derby" name="derbytools" rev="10.6.2.1" conf="*->default" />
 		
+		<!-- JUnit -->
+		<dependency org="junit" name="junit" rev="3.8.2" />
+		
 		<!-- Checkstyle -->
 		<dependency org="checkstyle" name="checkstyle" rev="5.1" conf="testing->runtime" />
 	</dependencies>
