--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,10 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-r06.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-java-client-driver-tests.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-java-client-driver.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
