- finalized the ability to modify the own profile data while logged in - factorized common server-side methods to final class Util.java
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1366 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -62,12 +62,12 @@
   </servlet-mapping>
   
   <servlet>
-    <servlet-name>delete</servlet-name>
-    <servlet-class>org.timadorus.webapp.server.rpc.service.DeleteUserServiceImpl</servlet-class>
+    <servlet-name>user</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.UserServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>delete</servlet-name>
-    <url-pattern>/timadoruswebapp/delete</url-pattern>
+    <servlet-name>user</servlet-name>
+    <url-pattern>/timadoruswebapp/user</url-pattern>
   </servlet-mapping>
 </web-app>
