--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-server.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.1.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
