--- a/ivy.xml
+++ b/ivy.xml
@@ -1,4 +1,7 @@
-<ivy-module version="2.0">
+<ivy-module version="2.0" 
+            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd"
+            xmlns:m="http://ant.apache.org/ivy/maven">
 
 	<!-- Name der Organisation und des Moduls -->
 	<info organisation="timadorus" module="webapp" />
