Changed the organisation name to "org.timadorus"
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1628 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/ivy.xml
+++ b/ivy.xml
@@ -4,7 +4,7 @@
             xmlns:m="http://ant.apache.org/ivy/maven">
 
 	<!-- Name der Organisation und des Moduls -->
-	<info organisation="timadorus" module="webapp" />
+	<info organisation="org.timadorus" module="webapp" />
     
     <!-- Erreichbare Konfigurationen -->
     <configurations>
