--- a/build.xml
+++ b/build.xml
@@ -209,26 +209,31 @@
 		</ivy:publish>
 	</target>
 
-
-
-
 	<!-- Task:revisionNumber | Merkt sich die aktuelle Revision Nummer  -->
 	<target name="revisionNumber" description="--> Get latest revision number">
 
-		<taskdef name="svn" classname="org.tigris.subversion.svnant.SvnTask" classpathref="TimadorusWebApp.classpath" />
-		<svn>
-			<status path="${basedir}/src/org/timadorus/webapp/util/RevisionInfo.java" revisionProperty="svn.revision" />
-		</svn>
+		<typedef resource="com/googlecode/svntask/svntask.xml">
+	        <classpath>
+                <fileset dir="${basedir}/lib">
+                        <include name="svnkit.jar"/>
+                        <include name="svntask.jar"/>
+                </fileset>
+	        </classpath>
+        </typedef>
+
+        <svn>
+        	<info path="${basedir}" committedRevisionProperty="revisionVersion" />
+        </svn>
 		<tstamp>
 			<format property="TODAY" pattern="EEE, d-MMMM-yyyy HH:mm:ss z" locale="ENGLISH, GERMANY" />
 		</tstamp>
-		<echo>Revision Number: ${svn.revision}</echo>
+		<echo>Revision Number: ${revisionVersion}</echo>
         <echo file="${basedir}/src/org/timadorus/webapp/util/RevisionInfo.java">
             package org.timadorus.webapp.util;
               public final class RevisionInfo {
               private RevisionInfo() {
               }
-              public static final String REVISION_NUMBER = "${svn.revision}";
+              public static final String REVISION_NUMBER = "${revisionVersion}";
               public static final String TIME_STAMP = "${TODAY}";
             }
         </echo>
