--- a/.classpath
+++ b/.classpath
@@ -6,34 +6,13 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="test-src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derby-10.6.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbyclient-10.6.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbynet-10.6.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbytools-10.6.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/gwt-dev-2.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/gwt-servlet-2.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/gwt-user-2.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jdo-api-3.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/transaction-api-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/checkstyle-5.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-r06.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-java-client-driver-tests.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-java-client-driver.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/junit-3.8.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/selenium-server.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.1.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="lib" path="static_lib/selenium-java-client-driver.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/commons-email-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-server-2.0b3.jar"/>
+	<classpathentry kind="lib" path="lib/testing/junit-3.8.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
