--- a/build.xml
+++ b/build.xml
@@ -4,32 +4,35 @@
 	<!-- Beschreibt die Umgebung für die diese Datei verwendet wird -->
 	<property environment="env" />
 
-	<!-- Angaben zum Debuglevel -->
+	<!-- set the debug level -->
 	<property name="debuglevel" value="source,lines,vars" />
 
-	<!-- Pfad zu den Java Quelldateien -->
-	<property name="sourceDir" value="src" />
+	<!-- path to the java source files -->
+	<property name="src.dir" value="${basedir}/src" />
+	<property name="test-src.dir" value="${basedir}/test-src" />
 
-	<!-- Pfad zum Zielordner der WebApp -->
-	<property name="to" value="war/WEB-INF" />
+	<property name="lib.dir" value="${basedir}/lib"/>
+	<property name="bin.dir" value="${basedir}/bin"/>
 
-	<!-- Pfad zum Zielordner der Klassenkompilierung der WebApp -->
-	<property name="destination" value="${to}/classes" />
+	<!-- root of the war hierarchy -->
+	<property name="war.dir" value="${basedir}/war"/>
 
-	<!-- Pfad zu dem Ordner in welchen die JAR’s kopiert werden -->
-	<property name="destinationLib" value="${to}/lib" />
+	<!-- destination folder for the classes compiled into the web application -->
+	<property name="war.classes" value="${war.dir}/WEB-INF/classes" />
 
-	<!-- Angaben zur Version -->
+	<!-- lib folder within the web app. All jars needed to actually run the 
+	     web app need to be copied into this
+      -->
+	<property name="war.lib" value="${war.dir}/WEB-INF/lib" />
+
+	<!-- control of the java language version  -->
 	<property name="target" value="1.6" />
 	<property name="source" value="1.6" />
 
-	<!-- Pfad zum Ivy Arbeitsverzeichnis -->
+
+	<!-- ivy working folder -->
 	<property name="ivy.dir" value="${basedir}/ivy" />
-
-	<!-- Pfad zur Datei mit den Ivy Einstellungen -->
 	<property name="ivy.settings.file" value="${ivy.dir}/ivysettings.xml" />
-
-	<!-- Pfad zum Cache von Ivy -->
 	<property name="ivy.cache.dir" value="${ivy.dir}/cache" />
 
 	<!-- WebApp Artifactory Settings -->
@@ -38,188 +41,132 @@
 	<property name="pub.snapshot.resolver" value="timadorus-snapshot" />
 	<property name="pub.release.resolver" value="timadorus-release" />
 
-	<!-- Definition der im Classpath enthaltenen Dateien -->
+	<!-- path collection of all files relevant to the actual webapp -->
 	<path id="TimadorusWebApp.classpath">
 
-		<!-- Quell und Ziel Java-Dateien -->
-		<pathelement location="${destination}" />
-		<pathelement location="${sourceDir}" />
+		<!-- source and compiled java files -->
+		<pathelement location="${war.classes}" />
+		<pathelement location="${src.dir}" />
 
-		<!-- Alle JAR’s aus dem Lib-Ordner des WebApp -->
-		<fileset dir="${destinationLib}">
+		<!-- the jars from the webapp lib folder -->
+		<fileset dir="${war.lib}">
 			<include name="*.jar" />
 		</fileset>
 
 	</path>
 
+	<path id="compile.classpath">
+		<pathelement path="${java.class.path}/" />
+		<fileset dir="${lib.dir}/compile">
+			<include name="**/*.jar"/>
+			<include name="**/*.zip"/>
+		</fileset>
 
-	<!-- Task:resolve | Löse Abhängigkeiten mit Ivy auf -->
-	<target name="resolve" description="-> handle dependencies with ivy">
-		<!-- Cache von Ivy löschen um Neues herunterladen zu erzwingen -->
-		<!--ivy:cleancache /-->
+		<fileset dir="${basedir}/static_lib">
+			<include name="**/*.jar"/>
+			<include name="**/*.zip"/>
+		</fileset>
+	</path>	
 
+	<path id="testing.classpath">
+		<pathelement path="${java.class.path}/" />
+		<fileset dir="${lib.dir}/testing">
+			<include name="**/*.jar"/>
+			<include name="**/*.zip"/>
+		</fileset>
+
+		<fileset dir="${basedir}/static_lib">
+			<include name="**/*.jar"/>
+			<include name="**/*.zip"/>
+		</fileset>
+	</path>
+
+	<path id="enhance.classpath">
+
+		<!-- Quell und Ziel Java-Dateien -->
+		<pathelement location="${war.classes}" />
+		<pathelement location="${src.dir}" />
+
+		<path refid="compile.classpath"/>
+	</path>
+
+	<target name="resolve" description="resolve and download dependencies with ivy">
 		<!-- Ivy Einstellungen einbinden -->
 		<ivy:settings file="${ivy.settings.file}" />
+	    <ivy:resolve />
+		<ivy:retrieve  pattern="${lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]" sync="true"/>
+	    <ivy:report todir="${ivy.dir}/reports"/>
 
-		<!-- Abhängigkeiten auflösen -->
-		<ivy:retrieve />
+		<!-- after (hopefully) retrieving all dependencies, add the tasks -->
+	    <!-- JUnit -->
+		<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask"
+				 classpathref="testing.classpath" />
+		<!-- Checkstyle -->
+		<taskdef resource="checkstyletask.properties"   classpathref="testing.classpath"/>
+
+		<!-- svn task -->
+		<typedef resource="com/googlecode/svntask/svntask.xml"  classpathref="testing.classpath"/>
+
+		<!-- load the JDO/JPA enhancer task. -->
+		<taskdef name="datanucleusenhancer" classpathref="compile.classpath" classname="org.datanucleus.enhancer.tools.EnhancerTask" />
+
 	</target>
 
 
-	<!-- Task:clean | Löschen von Zielordnern -->
-	<target name="clean">
-		<delete dir="${destination}" />
-		<delete dir="${destinationLib}" failonerror="false" />
+	<target name="clean" description="delete the target folders">
+		<delete dir="${war.classes}" />
+		<delete dir="${war.lib}" failonerror="false" />
 	</target>
 
 
-	<!-- Task:init | Erstellen von Zielordnern, Umkopieren von Dateien und Libraries -->
+	<!-- Target:init | set up the needed folder hierarchy and copy the runtime jars
+	                 into the war lib folder
+	  -->
 	<target name="init">
 
-		<!-- Erstellen eines Ordners -->
-		<mkdir dir="${destination}" />
+		<!-- folder for the classes in the war -->
+		<mkdir dir="${war.classes}" />
 
-		<!-- Umkopieren von Einstellungsdateien aus src/ -->
-		<copy includeemptydirs="false" todir="${destination}">
+		<!-- folder for all other derived/compiled files -->
+		<mkdir dir="${bin.dir}"/>
+		
+		<!-- copy settings and config files from src/, i.e. every thing that 
+		     is not a java source file 
+		  -->
+		<copy includeemptydirs="false" todir="${war.classes}">
 			<fileset dir="src">
 				<exclude name="**/*.launch" />
 				<exclude name="**/*.java" />
 			</fileset>
 		</copy>
 
-		<mkdir dir="${destinationLib}" />
+		<mkdir dir="${war.lib}" />
 
-		<!-- Umkopieren der JAR’s -->
-		<copy includeemptydirs="false" todir="${destinationLib}">
-			<fileset dir="lib" />
+		<!-- copy all runtime jars into the wars lib folder -->
+		<copy includeemptydirs="false" todir="${war.lib}">
+			<fileset dir="${lib.dir}/runtime" />
 		</copy>
 	</target>
 
+	<!-- Target: compile the test code -->
+	<target name="test-compile" depends="clean,init">
 
-	<!-- Task:java-compile | Kompilieren der Javaklassen (führt vorher die Tasks clean und init aus) -->
-	<target name="java-compile" depends="clean,init">
+		<!-- run the compilation -->
+		<javac debug="true" debuglevel="${debuglevel}" destdir="${war.classes}" source="${source}" target="${target}">
 
-		<!-- Aufruf zum Kompilieren -->
-		<javac debug="true" debuglevel="${debuglevel}" destdir="${destination}" source="${source}" target="${target}">
+			<!-- source folder -->
+			<src path="test-src" />
 
-			<!-- Quellordner -->
-			<src path="src" />
-
-			<!-- Zugehöriger Classpath (Definition siehe oben) -->
-			<classpath refid="TimadorusWebApp.classpath" />
+			<!-- appropriate classpath from above  -->
+			<classpath refid="testing.classpath" />
 		</javac>
 	</target>
 
-	<!-- Task:test-checkstyle | Führt einen Checkstyle test aus -->
-	<taskdef resource="checkstyletask.properties" classpath="lib/checkstyle-5.2-all.jar" />
-
-	<!-- Task:test-checkstyle | Führt einen Checkstyle test aus -->
-	<target name="test-checkstyle">
-		<sequential>
-			<mkdir dir="${basedir}/test-results" />
-			<checkstyle config="${basedir}/checkstyle.xml" failOnViolation="true">
-				<formatter type="plain" />
-				<formatter type="xml" toFile="${basedir}/test-results/checkstyle-log.xml" />
-				<fileset dir="${sourceDir}" includes="**/*.java" />
-				<!--property key="checkstyle.cache.file" file="${build.dir}/checkstyle-cache" /-->
-			</checkstyle>
-		</sequential>
-	</target>
-
-
-	<!-- Task:enhance | Führt ein Byte-Enhancement auf die kompilierten Javaklassen aus -->
-	<target name="enhance" description="DataNucleus enhancement">
-
-		<!-- Gib den Enhancement-Task bekannt -->
-		<taskdef name="datanucleusenhancer" classpathref="TimadorusWebApp.classpath" classname="org.datanucleus.enhancer.tools.EnhancerTask" />
-
-		<!-- Führt die Enhancement-Task aus -->
-		<datanucleusenhancer failonerror="true" verbose="true">
-
-			<!-- Pfad zu den Klassen die enhanced werden sollen -->
-			<fileset dir="${destination}">
-				<include name="**/*.class" />
-			</fileset>
-			<classpath refid="TimadorusWebApp.classpath" />
-		</datanucleusenhancer>
-	</target>
-
-
-	<!-- Task:gwt-compile | Kompiliert die Javaklassen in Javascript-Code -->
-	<target name="gwt-compile">
-
-		<!-- Ruft das Makro auf in welchem das Kompilieren definiert ist -->
-		<gwtCompile module="org.timadorus.webapp.TimadorusWebApp" classpathref="TimadorusWebApp.classpath" />
-	</target>
-
-	<!-- Makro:gwtCompile | Definiert wie die Klassen mit GWT kompiliert werden sollen -->
-	<macrodef name="gwtCompile">
-
-		<!-- Parameter die beim Aufruf angegeben werden -->
-		<attribute name="module" />
-		<attribute name="classpathref" default="TimadorusWebApp.classpath" />
-
-		<!-- Sequenz für die Ausführung des Makros -->
-		<sequential>
-
-			<!-- Ruft den GWT-Compiler unter Angabe des Entrypoints auf -->
-			<java classpathref="@{classpathref}" classname="com.google.gwt.dev.Compiler" fork="true">
-				<arg value="@{module}" />
-			</java>
-		</sequential>
-	</macrodef>
-
-	<!-- Task:embeddedServer | Bereitet einen Embedded Server vor -->
-	<target name="embeddedServer" description="--> Creates self-executing jar">
-		<property name="tmpServer.dir" location="${basedir}/tmpServer" />
-
-		<!-- Erzeugt einen temporären Ordner -->
-		<mkdir dir="${tmpServer.dir}" />
+	<!-- Target:revisionNumber | write the current SVN revision number into a 
+	     valid java class file, so the application can read its own version  
+	  -->
+	<target name="revisionNumber">
 		
-		<!-- Entpackt den EmbeddedServer in den TmpOrdner -->
-		<unjar dest="${tmpServer.dir}">
-			<fileset dir="lib">
-				<include name="winstone-0.9.10-hudson-24.jar" />
-			</fileset>
-		</unjar>
-
-		<!-- Baut die .war für den Server -->
-		<zip destfile="${tmpServer.dir}/embedded.war" basedir="war" />
-
-		<!-- Erstellt aus dem Inhalt des TmpOrdners die .jar mit dem Server und der WebApp -->
-		<zip destfile="${basedir}/webapp.jar" basedir="${tmpServer.dir}" />
-
-		<!-- Löscht den temporären Ordner -->
-		<delete dir="${tmpServer.dir}" />
-
-	</target>
-
-	<!-- Task:publishEmbeddedServer | Fügt dem Repository die WebApp hinzu -->
-	<target name="publishEmbeddedServer" description="--> Publish self-executing jar into repository">
-		<ivy:publish pubrevision="${pub.version}-SNAPSHOT" status="${pub.status}" resolver="${pub.snapshot.resolver}" overwrite="true" update="true">
-			<artifacts pattern="${basedir}/[artifact].[ext]" />
-		</ivy:publish>
-	</target>
-
-	<!-- Task:publishEmbeddedServer-release | Fügt dem Repository die WebApp als Release-Version hinzu  -->
-	<target name="publishEmbeddedServer-release" description="--> Publish self-executing jar into repository">
-		<ivy:publish pubrevision="${pub.version}" status="${pub.status}" resolver="${pub.release.resolver}" overwrite="true">
-			<artifacts pattern="${basedir}/[artifact].[ext]" />
-		</ivy:publish>
-	</target>
-
-	<!-- Task:revisionNumber | Merkt sich die aktuelle Revision Nummer  -->
-	<target name="revisionNumber" description="--> Get latest revision number">
-
-		<typedef resource="com/googlecode/svntask/svntask.xml">
-	        <classpath>
-                <fileset dir="${basedir}/lib">
-                        <include name="svnkit.jar"/>
-                        <include name="svntask.jar"/>
-                </fileset>
-	        </classpath>
-        </typedef>
-
         <svn>
         	<info path="${basedir}" committedRevisionProperty="revisionVersion" />
         </svn>
@@ -227,7 +174,7 @@
 			<format property="TODAY" pattern="EEE, d-MMMM-yyyy HH:mm:ss z" locale="ENGLISH, GERMANY" />
 		</tstamp>
 		<echo>Revision Number: ${revisionVersion}</echo>
-        <echo file="${basedir}/src/org/timadorus/webapp/util/RevisionInfo.java">
+        <echo file="${src.dir}/org/timadorus/webapp/util/RevisionInfo.java">
             package org.timadorus.webapp.util;
               public final class RevisionInfo {
               private RevisionInfo() {
@@ -238,6 +185,117 @@
         </echo>
 	</target>
 
-	<!-- Task:build | Definiert den Ablauf der Taskaufrufe für den Build -->
-	<target name="build" depends="resolve,java-compile,test-checkstyle,enhance,gwt-compile,embeddedServer,publishEmbeddedServer,revisionNumber" />
+	<!-- Target:java-compile | Kompilieren der Javaklassen (führt vorher die Tasks clean und init aus) -->
+	<target name="java-compile" depends="clean,init,revisionNumber">
+
+		<!-- Aufruf zum Kompilieren -->
+		<javac debug="true" debuglevel="${debuglevel}" destdir="${war.classes}" source="${source}" target="${target}">
+
+			<!-- Quellordner -->
+			<src path="src" />
+
+			<!-- Zugehöriger Classpath (Definition siehe oben) -->
+			<classpath refid="compile.classpath" />
+		</javac>
+	</target>
+
+	<!-- Target:test-checkstyle | run the checkstyle test -->
+	<target name="test-checkstyle">
+		<sequential>
+			<mkdir dir="${basedir}/test-results" />
+			<checkstyle config="${basedir}/checkstyle.xml" failOnViolation="true">
+				<formatter type="plain" />
+				<formatter type="xml" toFile="${basedir}/test-results/checkstyle-log.xml" />
+				
+				<fileset dir="${src.dir}" includes="**/*.java" />
+				<fileset dir="${test-src.dir}" includes="**/*.java" />
+				
+				<!--property key="checkstyle.cache.file" file="${build.dir}/checkstyle-cache" /-->
+			</checkstyle>
+		</sequential>
+	</target>
+
+
+	<!-- Target:enhance | run the byte enhancement of the required java classes 
+	     to be used as entities with JDO/JPA 
+	  -->
+	<target name="enhance" description="DataNucleus enhancement">
+
+		<!-- run the enhancement -->
+		<datanucleusenhancer failonerror="true" verbose="true">
+			<classpath refid="enhance.classpath" />
+
+			<!-- path to files that are to be considered for enhancement -->
+			<fileset dir="${war.classes}">
+				<include name="**/*.class" />
+			</fileset>
+		</datanucleusenhancer>
+	</target>
+
+
+	<!-- Target:gwt-compile | compile gwt java classes to JavaScript code -->
+	<target name="gwt-compile">
+
+		<!-- run compilation macro -->
+		<gwtCompile module="org.timadorus.webapp.TimadorusWebApp" classpathref="TimadorusWebApp.classpath" />
+	</target>
+
+	<!-- Makro:gwtCompile | create macro for creating  -->
+	<macrodef name="gwtCompile">
+
+		<!-- define parameters -->
+		<attribute name="module" />
+		<attribute name="classpathref"/>
+
+		<!-- run task in sequential order -->
+		<sequential>
+
+			<!-- run gwt compiler for supplied entry point -->
+			<java classpathref="@{classpathref}" classname="com.google.gwt.dev.Compiler" fork="true">
+				<arg value="@{module}" />
+			</java>
+		</sequential>
+	</macrodef>
+
+	<!-- Task:embeddedServer | set up the embedded server jar -->
+	<target name="embeddedServer" description="--> Creates self-executing jar">
+		<property name="tmpServer.dir" location="${basedir}/tmpServer" />
+
+		<!-- create a temporary folder -->
+		<mkdir dir="${tmpServer.dir}" />
+		
+		<!-- unpack the winstone server into the temporary folder -->
+		<unjar dest="${tmpServer.dir}">
+			<fileset dir="${lib.dir}/compile">
+				<include name="winstone-0.9.10-hudson-24.jar" />
+			</fileset>
+		</unjar>
+
+		<!-- build the server .war -->
+		<zip destfile="${tmpServer.dir}/embedded.war" basedir="${war.dir}" />
+
+		<!-- create from jar with server and wepapp from the tmpServer.dir -->
+		<zip destfile="${basedir}/webapp.jar" basedir="${tmpServer.dir}" />
+
+		<!-- delete the temporary folder -->
+		<delete dir="${tmpServer.dir}" />
+
+	</target>
+
+	<!-- Target:publishEmbeddedServer | put resultant jar into repository as snapshot -->
+	<target name="publishEmbeddedServer" description="--> Publish self-executing jar into repository">
+		<ivy:publish pubrevision="${pub.version}-SNAPSHOT" status="${pub.status}" resolver="${pub.snapshot.resolver}" overwrite="true" update="true">
+			<artifacts pattern="${basedir}/[artifact].[ext]" />
+		</ivy:publish>
+	</target>
+
+	<!-- Target:publishEmbeddedServer-release | put resultant jar into repository as release version -->
+	<target name="publishEmbeddedServer-release" description="--> Publish self-executing jar into repository">
+		<ivy:publish pubrevision="${pub.version}" status="${pub.status}" resolver="${pub.release.resolver}" overwrite="true">
+			<artifacts pattern="${basedir}/[artifact].[ext]" />
+		</ivy:publish>
+	</target>
+
+	<!-- Target:build | define the order of the targets run to fullfill the build -->
+	<target name="build" depends="resolve,java-compile,test-compile,test-checkstyle,enhance,gwt-compile,embeddedServer,publishEmbeddedServer" />
 </project>
