--- a/ivy.xml
+++ b/ivy.xml
@@ -6,13 +6,11 @@
 	<!-- Name der Organisation und des Moduls -->
 	<info organisation="org.timadorus" module="webapp" />
     
-    <!-- Erreichbare Konfigurationen -->
     <configurations>
-     	<conf name="compile"/>
-     	<conf name="runtime"/>
-     	<conf name="testing" visibility="private" extends="compile"/>
-    </configurations>    
-
+    	<conf name="compile"  visibility="private"/>
+    	<conf name="testing"  visibility="private" extends="compile"/>
+    	<conf name="runtime"  visibility="public"/>
+    </configurations>
 	<!-- Hier beschreiben wir die Abhängigkeiten -->
 	<dependencies>
 
@@ -20,7 +18,7 @@
 		<dependency org="com.google" name="gwt" rev="2.0.4" />
 
 		<!-- DataNucleus -->
-		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.2" conf="*->default" />
+		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.2" conf="compile->default" />
 		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="2.1.3" conf="*->default,provided" />
 
 		<!-- Apache Derby -->
@@ -29,13 +27,24 @@
 		<dependency org="org.apache.derby" name="derbynet" rev="10.6.2.1" conf="*->default" />
 		<dependency org="org.apache.derby" name="derbytools" rev="10.6.2.1" conf="*->default" />
 		
+		<!-- handling mail -->
+        <dependency org="org.apache.commons" name="commons-email" rev="1.2" conf="*->default"/>
+		
 		<!-- JUnit -->
-		<dependency org="junit" name="junit" rev="3.8.2" />
+		<dependency org="junit" name="junit" rev="3.8.2" conf="testing->default"/>
 		
 		<!-- Checkstyle -->
 		<dependency org="checkstyle" name="checkstyle" rev="5.1" conf="testing->runtime" />
 		
+		<!-- Selenium -->
+		<dependency org="org.seleniumhq.selenium" name="selenium-server" rev="2.0b3" conf ="testing->default" />
+		<dependency org="org.seleniumhq.selenium.client-drivers" name="selenium-java-client-driver" rev="1.0.2" conf ="testing->default" />
+		
 		<!-- Winstone -->
 		<dependency org="org.jvnet.hudson.winstone" name="winstone" rev="0.9.10-hudson-24" conf="*->default" />
+		
+		<!-- SVNKit -->
+		<dependency org="org.tmatesoft.svnkit" name="svnkit" rev="1.3.5" conf="compile->default"/>
+		
 	</dependencies>
 </ivy-module>
