--- a/ivy.xml
+++ b/ivy.xml
@@ -46,5 +46,8 @@
 		<!-- SVNKit -->
 		<dependency org="org.tmatesoft.svnkit" name="svnkit" rev="1.3.5" conf="compile->default"/>
 		
+		<!-- JDO -->
+		<dependency org="javax.jdo" name="jdo-api" rev="3.0" conf="compile->default"/>
+		
 	</dependencies>
 </ivy-module>
