Bugfix Build Error
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1767 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -261,8 +261,9 @@
 		</sequential>
 	</macrodef>
 
+	<!-- Task:cleanDB | clean old database -->
 	<target name="cleanDB">
-    	<delete dir="${db.dir}"/>
+    	<delete dir="${db.dir}" quiet="true" />
  	</target>
 	
 	<!-- Task:installDB | set up the database -->
