--- a/build.xml
+++ b/build.xml
@@ -287,6 +287,13 @@
 		<!-- create a folder for the DB -->
 		<mkdir dir="${dbFolder.dir}" />
 		
+		<!-- copy database version file to db folder -->
+		<copy todir="${db.dir}">
+	      <fileset dir="${sql.dir}">
+	        <include name="**/version" />
+	      </fileset>
+	    </copy>
+		
 		<!-- unpack the winstone server into the temporary folder -->
 		<unjar dest="${tmpServer.dir}">
 			<fileset dir="${lib.dir}/compile">
@@ -294,14 +301,18 @@
 			</fileset>
 		</unjar>
 
+		<!-- copy changed winstone launcher class file to winstone folder -->
+		<copy todir="${tmpServer.dir}/winstone">
+	      <fileset dir="${sql.dir}">
+	        <include name="**/Launcher.class" />
+	      </fileset>
+	    </copy>
+		
 		<!-- build the server .war -->
 		<zip destfile="${tmpServer.dir}/embedded.war" basedir="${war.dir}" />
 
-		<!-- copy the db to the home root -->
-		
-		<copy includeemptydirs="true" todir="${dbFolder.dir}">
-			<fileset dir="${db.dir}" />
-		</copy>
+		<!-- copy and zip the db to the home root -->
+		<zip destfile="${dbFolder.dir}.zip" basedir="${db.dir}" />
 		
 		<!-- create from jar with server and wepapp from the tmpServer.dir -->
 		<zip destfile="${basedir}/webapp.jar" basedir="${tmpServer.dir}" />
