Added campaign service servlet references
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1846 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -70,4 +70,14 @@
     <servlet-name>user</servlet-name>
     <url-pattern>/timadoruswebapp/user</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>createCampaign</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.CreateCampaignServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>createCampaign</servlet-name>
+    <url-pattern>/timadoruswebapp/createCampaign</url-pattern>
+  </servlet-mapping>
 </web-app>
