Began fraction implementation
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1853 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -80,4 +80,14 @@
     <servlet-name>createCampaign</servlet-name>
     <url-pattern>/timadoruswebapp/createCampaign</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>createFraction</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.CreateFractionServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>createFraction</servlet-name>
+    <url-pattern>/timadoruswebapp/createFraction</url-pattern>
+  </servlet-mapping>
 </web-app>
