--- a/ivy.xml
+++ b/ivy.xml
@@ -14,8 +14,12 @@
 	<!-- Hier beschreiben wir die Abhängigkeiten -->
 	<dependencies>
 
+		<!--  other Timadorus parts -->
+		<dependency org="de.harper-hall" name="bookkeeper" rev="0.1" />
+
 		<!-- GWT -->
-		<dependency org="com.google" name="gwt" rev="2.0.4" />
+		<dependency org="com.google.gwt" name="gwt-user" rev="2.3.0" />
+		<dependency org="com.google.gwt" name="gwt-dev" rev="2.3.0" />
 
 		<!-- DataNucleus -->
 		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.3" conf="compile->default" />
