--- a/ivy.xml
+++ b/ivy.xml
@@ -18,8 +18,9 @@
 		<dependency org="de.harper-hall" name="bookkeeper" rev="0.1" />
 
 		<!-- GWT -->
-		<dependency org="com.google.gwt" name="gwt-user" rev="2.3.0" />
-		<dependency org="com.google.gwt" name="gwt-dev" rev="2.3.0" />
+		<dependency org="com.google.gwt" name="gwt-user" rev="2.4.0" />
+		<dependency org="com.google.gwt" name="gwt-dev" rev="2.4.0" />
+		<dependency org="com.google.gwt" name="gwt-servlet" rev="2.4.0" />
 
 		<!-- DataNucleus -->
 		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.3" conf="compile->default" />
