--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,16 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="static_lib/selenium-java-client-driver.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/commons-email-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-server-2.0b3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/runtime/gwt-user-2.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/bookkeeper-0.1.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/gwt-dev-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/gwt-servlet-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/gwt-user-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/datanucleus-api-jdo-3.0.7.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/datanucleus-core-3.0.9.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/datanucleus-rdbms-3.0.8.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
